html extra features added

--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
     <h1>Alperen Kapusuz</h1><!--baslik-->
     <h2>Merhaba ben Alperen</h2><!--alt baslik-->
     <p>I love coding</p><!--paragraf-->
+    <h2>1. Film</h2>
+    <ul>
+        <li>Lord of the rings</li>
+        <li>Matrix</li>
+        <li>Kolpacino</li>
+    </ul>
+    <h2>1. Dizi</h2>
+    <ul>
+        <li>Kurtlar vadisi</li>
+        <li>game of thrones</li>
+        <li>akasya duragi</li>
+    </ul>
+    <h2>1. kitap</h2>
+    <ul>
+        <li>Veri yapiları ve algoritmalar</li>
+        <li>yaban</li>
+        <li>cin ali</li>
+    </ul>
+    <img src="https://assets.entrepreneur.com/content/3x2/2000/20160720112333-TheLordoftheRings.jpeg" alt="lord of the rings" width="500">
+    <p><strong> Ronald Reuel Tolkien</strong>'in yazdığı Yüzüklerin Efendisi adlı fantastik edebiyat serisinden uyarlanarak çekilmiş Peter Jackson imzalı bir film üçlemesidir</p>
+    
 </body>
 </html>
